<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Command and Influence</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_mission">Should you choose to accept it</string>
    <string name="auth_lastname_hint">Last name</string>
    <string name="auth_firstname_hint">First name</string>
    <string name="auth_password_hint">Password</string>
    <string name="auth_submit_text">Submit</string>
    <string name="mission_image_desc">Image of your target</string>
    <string name="mission_button_confirm">Accept</string>
    <string name="mission_button_decline">Decline</string>
    <string name="title_activity_map">Report to this location</string>
    <string name="map_action_complete">Completed</string>
    <string name="map_action_failed">Failed</string>

</resources>
