<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MissionActivity" >
    
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:contentDescription="@string/mission_image_desc"
        android:scaleType="centerCrop"
        android:src="@drawable/me" />
    
    <LinearLayout android:id="@+id/footer" android:layout_width="fill_parent"
	    android:layout_height="wrap_content" android:orientation="horizontal"
	    style="?android:attr/buttonBarStyle">
	
	    <Button android:id="@+id/cancelButton" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_weight="1"
	        style="?android:attr/buttonBarButtonStyle"
	        android:text="@string/mission_button_decline" />

	    <Button android:id="@+id/saveButton" android:layout_width="wrap_content"
	        android:layout_height="wrap_content" android:layout_weight="1"
	        style="?android:attr/buttonBarButtonStyle"
	        android:text="@string/mission_button_confirm" />
	</LinearLayout>

</LinearLayout>
